--- a/src/app/main-app/workshop/workshop-main/workshop-main.component.css
+++ b/src/app/main-app/workshop/workshop-main/workshop-main.component.css
@@ -287,7 +287,9 @@
     text-align: center;
     display: flex;
     gap: 10px;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .enroll-btn {
